# 23202-bliznyuk-OOP-CPP

task-0/: CMakeLists.txt  input.txt  main.cpp  output.csv  word-stats.cpp
task-0/Google_tests/: CMakeLists.txt  FileReaderTest.cpp  FileWriterTest.cpp  ParserTest.cpp  StatisticTest.cpp
task-0/Googletests/: CMakeLists.txt  StatisticTest.cpp
task-0/src/: CMakeLists.txt  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  Parser.cpp  Parser.h  Statistic.cpp  Statistic.h
task-1/: CMakeLists.txt  main.cpp
task-1/Google_tests/: BitArrayTest.cpp  CMakeLists.txt
task-1/src/: BitArray.cpp  BitArray.h  CMakeLists.txt
task-2/: CMakeLists.txt  defaultUniverse.txt  main.cpp
task-2/Google_tests/: CMakeLists.txt  GameTest.cpp
task-2/Universes/: defaultUniverse.txt  glider.txt  glidergun.txt
task-2/src/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  CommandProcessor.cpp  CommandProcessor.h  DumpHandler.cpp  DumpHandler.h  ExitHandler.cpp  ExitHandler.h  Game.cpp  Game.h  Grid.cpp  Grid.h  HelpHandler.cpp  HelpHandler.h  Rule.cpp  Rule.h  TickHandler.cpp  TickHandler.h  Universe.cpp  Universe.h  UniverseLoader.cpp  UniverseLoader.h  UniverseReader.cpp  UniverseReader.h  UniverseWriter.cpp  UniverseWriter.h
task-3/: CMakeLists.txt  main.cpp
task-3/src/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  ConfigParser.cpp  ConfigParser.h  ConfigReader.h  Converter.cpp  Converter.h  ConverterFactory.cpp  ConverterFactory.h  Exceptions.cpp  Exceptions.h  FastConverter.cpp  FastConverter.h  MixConverter.cpp  MixConverter.h  MuteConverter.cpp  MuteConverter.h  SoundProcessor.cpp  SoundProcessor.h  WAVFile.cpp  WAVFile.h  WAVFileReader.cpp  WAVFileReader.h  WAVFileWriter.cpp  WAVFileWriter.h
